v2 avec comparaison Thread ordinaire et virtuel