@@ -3,7 +3,7 @@ package tp.ex;
 import java.net.ServerSocket;
 import java.net.Socket;
 
-public class BasicServerApp {
+public class BasicServerV2App {
     static int port =9632; //par défaut
     private static boolean stop=false;
     //private static boolean withVirtualThread=false;
@@ -14,19 +14,14 @@ public class BasicServerApp {
             ServerSocket socketServeur = new ServerSocket(port);
             System.out.println("initialisation du serveur , Socket  port="+port + " withVirtualThread=" + withVirtualThread);
             while (!stop) {
-                try(Socket socketClient = socketServeur.accept()) {
-                    if (withVirtualThread) {
-                        Thread.ofVirtual().start(new EvenOrOddTask(socketClient));
-                    } else {
-                        Thread t = new Thread(new EvenOrOddTask(socketClient));
+                Socket socketClient = socketServeur.accept();
+                if (withVirtualThread) {
+                        Thread.ofVirtual().start(new EvenOrOddV2Task(socketClient));
+                } else {
+                        Thread t = new Thread(new EvenOrOddV2Task(socketClient));
                         t.start();
-                    }
-                }catch(Exception ex){
-                    ex.printStackTrace();
-                }//automatic close of socketClient
+                }
             }
         } catch (Exception e) {  e.printStackTrace();        }
     }
-
-
 }
